--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
+    ext{
+        kotlin_version = "1.5.10"
+        version_moshi = "1.9.3"
+        version_recyclerview = "1.2.0-alpha05"
+        version_glide = "4.8.0"
+        version_retrofit = "2.9.0"
+        version_navigation = "1.0.0"
+
+    }
+
     repositories {
         google()
         mavenCentral()
@@ -8,6 +17,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
